[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "agera5tools"
version = "2.0.4"
authors = [
  { name="Allard de Wit", email="allard.dewit@wur.nl" },
]
description = "AgERA5 is a tool for handling AgERA5 data from the Copernicus Climate Data Store."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ajwdewit/agera5tools"
documentation = "https://agera5tools.readthedocs.io"

[options]
install_requires = [
    "pandas == 1.4",
    "PyYAML >= 6.0",
    "Pandas >= 1.3",
    "SQLAlchemy >= 1.4, <2.0",
    "PyYAML >= 6.0",
    "xarray >= 2022.12.0",
    "dask >= 2022.7.0",
    "click >= 8.1",
    "flask >= 2.2",
    "cdsapi >= 0.5.1",
    "dotmap >= 1.3",
    "netCDF4 >= 1.6",
    "requests >= 2.28",
    "wsgiserver >= 1.3"
]

[project.scripts]
agera5tools = "agera5tools.cmd:cli"