[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "agera5tools"
version = "2.1.0"
authors = [
  { name="Allard de Wit", email="allard.dewit@wur.nl" },
]
maintainers = [
  { name="Allard de Wit", email="allard.dewit@wur.nl" },
]
description = "AgERA5 is a tool for handling AgERA5 data from the Copernicus Climate Data Store."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas>=2.0",
    "PyYAML >= 6.0",
    "SQLAlchemy >= 2.0",
    "PyYAML >= 6.0",
    "xarray >= 2023.6.0",
    "dask >= 2023.0.0",
    "click >= 8.1",
    "flask >= 2.2",
    "cdsapi >= 0.7.5",
    "dotmap >= 1.3",
    "netCDF4 >= 1.6",
    "requests >= 2.28",
    "wsgiserver >= 1.3",
    "duckdb >= 1.1.3",
    "duckdb_engine >= 0.13.6"
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ajwdewit/agera5tools"
documentation = "https://agera5tools.readthedocs.io"
repository = "https://github.com/ajwdewit/agera5tools.git"

[project.scripts]
agera5tools = "agera5tools.cmd:cli"
